--- a/sample/package.json
+++ b/sample/package.json
@@ -4,6 +4,8 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
-    "express": "~4.12.4"
+    "express": "~4.12.4",
+    "mongodb": "^1.4.38",
+    "mongoskin": "^1.4.13"
   }
 }
